# LoanMe

./: .gitignore  README.md  aa.sh  app.py  loan_platform_schema.sql  make-wallet.sh  package-lock.json
anchor/: .env  Anchor.toml  Cargo.toml  README.md  buffer-keypair.json  package-lock.json  package.json  program-keypair.json  program-keypair.json--force  rust-toolchain.toml  test-borrower.json
anchor/app/: server.ts
anchor/programs/sol-backend/: Cargo.toml
anchor/programs/sol-backend/src/: lib.rs
anchor/tests/: sol-backend.ts  unit-tests.ts
backend/: .env  app.py  db.py  idl.py  insert_sample_data.py  load_testing.py  loan_platform.db  populate_database.py  requirements.txt  solana_wallet.txt  streamlit_dashboard.py
backend/myenv/: pyvenv.cfg
docker/: Dockerfile  run-docker.sh
frontend/next-app/: package-lock.json  package.json  tailwind.config.ts
frontend/next-app/app/: globals.css  layout.tsx  page.tsx
frontend/next-app/app/account/: page.tsx
frontend/next-app/app/account/create/: page.tsx
frontend/next-app/app/account/login/: page.tsx
frontend/next-app/app/dashboard/: page.tsx
frontend/next-app/app/marketplace/: LoanCards.tsx  page.tsx
frontend/next-app/app/marketplace/[id]/: page.tsx
frontend/next-app/components/home/: CoinGeckoWidget.tsx  web-vitals.tsx
frontend/next-app/pages/api/: users.js
pages/: landing.py
sol-backend/: Anchor.toml  package-lock.json  package.json  tsconfig.json
sol-backend/programs/sol-backend/: Cargo.toml
sol-backend/programs/sol-backend/src/: lib.rs
sol-backend/tests/: sol-backend.ts
(+2 files in other folders)
